Создано с помощью Colaboratory

--- a/ColabNotebooks/Lab1_Control2021.ipynb
+++ b/ColabNotebooks/Lab1_Control2021.ipynb
@@ -5,7 +5,6 @@
     "colab": {
       "name": "Lab1_Control2021.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPa3ebx0YMvNluB5ObO2x2y",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -21,7 +20,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/SergeiSa/Control-Theory-Slides-Spring-2021/blob/main/ColabNotebooks/Lab1_Control2021.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/br4ch1st0chr0n3/Control-Theory-Slides-Spring-2021/blob/lab1/ColabNotebooks/Lab1_Control2021.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -100,7 +99,7 @@
         "\r\n",
         "* $10 y^{(4)} -7  y^{(3)} + 2   \\ddot y + 0.5 \\dot y + 4y  = 15$\r\n",
         "* $5  y^{(4)} -17 y^{(3)} - 3   \\ddot y + 1.5 \\dot y + 2y  = 25$\r\n",
-        "* $-3 y^{(4)}  22 y^{(3)} + 4   \\ddot y + 1.5 \\dot y + 1y  = 15$\r\n",
+        "* $-3 y^{(4)} - 22 y^{(3)} + 4   \\ddot y + 1.5 \\dot y + 1y  = 15$\r\n",
         "* $5  y^{(4)} -17 y^{(3)} - 1.5 \\ddot y + 100 \\dot y + 1.1y= 45$\r\n",
         "* $1.5y^{(4)} -23 y^{(3)} - 2.5 \\ddot y + 0.1 \\dot y + 100y= -10$\r\n",
         "\r\n",
